# exemple_api_post_hexagonal

./: .env.example  .gitignore  README.md  create_project.py  create_project_interactive.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
documents/: 01_domain_entities.puml  03_services_layer.puml  05_database_schema.puml  08_use_cases.puml  ARCHITECTURE_COMPLIANCE.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  CRITICAL_FIXES_EXECUTIVE_SUMMARY.md  DEVELOPER_GUIDE_REQUEST_FLOW.md  REFACTORING_REPORT.md  TESTING.md  analyse_projet.md  plan_tdd_refactoring.md
src/: di_container.py  main.py
src/adapters/primary/fastapi/routers/: projects_router.py  users_router.py
src/adapters/primary/fastapi/schemas/: project_schemas.py  user_schemas.py
src/adapters/secondary/repositories/: mysql_project_repository.py  sqlalchemy_project_repository.py  sqlalchemy_user_repository.py
src/domain/: exceptions.py
src/domain/entities/: project.py  project_type.py  user.py
src/domain/services/: project_service.py  user_service.py
src/ports/primary/: project_use_cases.py  user_use_cases.py
src/ports/secondary/: project_repository.py  user_repository.py
tests/: __init__.py  conftest.py  test_setup.py  test_type_checking.py
tests/e2e/: __init__.py  test_projects_api.py  test_projects_api_crud.py  test_users_api.py
tests/integration/: __init__.py  test_project_repository.py  test_repository.py  test_user_repository.py
tests/unit/: __init__.py  test_di_container.py
tests/unit/adapters/: __init__.py
tests/unit/domain/: __init__.py  test_exceptions.py  test_project_entity.py  test_project_service.py  test_project_type_enum.py  test_user_entity.py  test_user_service.py
